Enviando projeto configurado

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Germano-Marcos.github.io/contagem_regressiva",
+  "homepage": "https://germano-marcos.github.io/contagem_regressiva",
   "name": "countdown",
   "private": true,
   "version": "0.0.0",
